update theme, content, and add back cv.html

--- a/less/mixins.less
+++ b/less/mixins.less
@@ -54,7 +54,7 @@
 }
 
 .script-font() {
-	font-family: Lato, "Helvetica Neue", Helvetica, Arial, cursive;
+	font-family: Lato, "Helvetica Neue", Helvetica, Arial, san-serif;
 }
 
 .body-font() {
