--- a/less/agency.less
+++ b/less/agency.less
@@ -86,6 +86,11 @@ h1, h2, h3, h4, h5, h6 {
 	.navbar-brand {
 		color: @brand-primary;
 		.script-font;
+        font-weight:900;
+        .thin{
+            font-weight: 300;
+            color: white;
+        }
         &:hover,
         &:focus,
         &:active,
@@ -165,7 +170,7 @@ header {
 	background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('../img/background.jpg');
 	background-repeat: none;
 	background-attachment: scroll;
-	background-position: center center;
+	background-position: center bottom;
 	.background-cover;
 	text-align: center;
 	color: white;
@@ -173,8 +178,8 @@ header {
 		padding-top: 100px;
 		padding-bottom: 50px;
 		.intro-lead-in {
-			.serif-font;
-            font-weight: 100;
+			.script-font;
+            font-weight: 500;
 			font-size: 22px;
 			line-height: 22px;
 			margin-bottom: 25px;
@@ -193,8 +198,8 @@ header {
 @media(min-width:768px) {
 	header {
 		.intro-text {
-			padding-top: 300px;
-			padding-bottom: 200px;
+			padding-top: 200px;
+			padding-bottom: 300px;
 		}
 	}
 }
@@ -233,7 +238,7 @@ section {
 
 // Portfolio Section
 
-#portfolio {
+.portfolio {
     .portfolio-item {
         margin: 0 0 15px;
         right: 0;
@@ -297,7 +302,7 @@ section {
 }
 
 @media(min-width:767px) {
-    #portfolio {
+    .portfolio {
         .portfolio-item {
             margin: 0 0 30px;
         }
