add images and social profiles

--- a/less/agency.less
+++ b/less/agency.less
@@ -523,8 +523,9 @@ aside.clients {
 
 section#contact {
 	background-color: @gray-darkest;
-	background-image: url('../img/map-image.png');
+	background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('../img/background2.jpg');
 	background-position: center;
+    background-size: cover;
 	background-repeat: no-repeat;
 	.section-heading {
 		color: white;
