--- a/less/agency.less
+++ b/less/agency.less
@@ -168,7 +168,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 header {
-	background-image: linear-gradient(rgba(9,6,1, 0.6), rgba(9,6,1, 0.6)), url('../img/background.jpg');
+	background-image: linear-gradient(rgba(9,6,1, 0.6), rgba(9,6,1, 0.6)), url('../img/background3.jpg');
 	background-repeat: none;
 	background-attachment: scroll;
 	background-position: center bottom;
